--- a/skeleton/assets/box_model.css
+++ b/skeleton/assets/box_model.css
@@ -4,27 +4,46 @@ body {
   /* If the user cannot load the Arial font, the sans-serif font is used */
   font-family: Arial, sans-serif;
   background-color: #FEFFF1;
+  width: 900px;
+  margin: 0 auto;
+  
 }
 
 h1 {
   font-size: 38px;
+  width: 700px;
+  
 }
 
 h2 {
   font-size: 32px;
 }
 
+
 /* This selector selects ALL anchor tag children of ALL list elements that
 are children of an Unordered Lsit element */
 ul li a, figcaption a {
   text-decoration: none;
   color: inherit;
+  display: inline-block;
+  padding: 20px;
+  display: flex;
+  flex: row;
 }
 
+aside {
+  width: 180px;
+}
+
+header {
+  display: flex;
+  flex: row;
+}
 /* This selector selects only IMMEDIATE (1 level deep) image element children
 of the header element */
 header > img {
   width: 100px;
+
 }
 
 /* Selects all elements with the class attribute "ingredients-list" */
