--- a/skeleton/assets/box_model.css
+++ b/skeleton/assets/box_model.css
@@ -11,7 +11,7 @@ body {
 
 h1 {
   font-size: 38px;
-  width: 700px;
+  /* width: 700px; */
   
 }
 
@@ -33,6 +33,14 @@ ul li a, figcaption a {
 
 aside {
   width: 180px;
+  margin-right:15px;
+  display: inline-block;
+
+}
+
+#test {
+   margin-right:15px;
+   display: inline-block;
 }
 
 header {
@@ -42,7 +50,7 @@ header {
 /* This selector selects only IMMEDIATE (1 level deep) image element children
 of the header element */
 header > img {
-  width: 100px;
+  width: 250px;
 
 }
 
@@ -51,10 +59,17 @@ header > img {
 
   /* The list style property is shorthand for multiple list-style properties*/
   list-style: square inside;
+  margin-top:  15px;
+  margin-bottom:  15 px;
 }
 
 ol {
   list-style: upper-roman inside;
+}
+
+ol li {
+  margin-top:  15px;
+  margin-bottom:  15 px;
 }
 
 .user_review h4 {
@@ -68,10 +83,17 @@ input[type="radio"] {
     height: 27px;
     background-image: url(../assets/stars.png);
     vertical-align: bottom;
+    display: flex;
+    flex: row;
+}
+
+#name { 
+  display: block;
 }
 
 input[type="radio"]:checked {
   background-position: 30px 30px;
+  display: block;
 }
 
 
